# Project-Chimera

./: pubspec.yaml
.github/workflows/: ci.yml
android/app/: build.gradle.kts
compute_plugin/: README.md  ffigen.yaml  pubspec.yaml
compute_plugin/android/: build.gradle  settings.gradle
compute_plugin/example/: README.md  pubspec.yaml
compute_plugin/ios/: compute_plugin.podspec
compute_plugin/lib/: compute_plugin.dart  compute_plugin_bindings_generated.dart
compute_plugin/src/: CMakeLists.txt  compute_plugin.c
data_package/: pubspec.yaml
engine_package/: pubspec.yaml
engine_package/test/: engine_package_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/engine/: ai_ml_hooks.dart  brush_engine.dart  effects_filters.dart  guides_assists.dart  layer_manager.dart  rendering_core.dart  selection_tools.dart  utilities.dart  vector_3d_support.dart
lib/providers/: tool_provider.dart
lib/ui/: brush_ui.dart  canvas_widget.dart  layer_ui.dart  tools_ui.dart
lib/utils/: color_management.dart  constants.dart  math_utils.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
vulkan_plugin/: README.md  pubspec.yaml
vulkan_plugin/android/: build.gradle  settings.gradle
vulkan_plugin/example/: README.md  pubspec.yaml
vulkan_plugin/lib/: vulkan_plugin.dart  vulkan_plugin_method_channel.dart  vulkan_plugin_platform_interface.dart
vulkan_plugin/test/: vulkan_plugin_method_channel_test.dart  (+1 more)
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+26 files in other folders)
